# av-repo-template

./: README.md  cookiecutter.json
{{ cookiecutter.__package_slug }}/: README.md  pyproject.toml
{{ cookiecutter.__package_slug }}/tests/: test_{{ cookiecutter.__package_slug }}.py
